MDEV-4222: Assertion `( ((global_system_variables.wsrep_on) &&   (thd && thd->variables.wsrep_on)) && wsrep_emulate_bin_log) ||   mysql_bin_log .is_open()' fails on SAVEPOINT with disabled   wsrep_provider

As wsrep_on system variable is ON by default the binlog handlerton
is implicitly enabled during the server initialization phase. Later,
while wsrep plugin is getting initialized, wsrep_on in corrected &
turned OFF in case wsrep provider is not specified (leaving binlog
in ON state!). This leads to the reported assertion.

Fixed by adding another check for wsrep provider before binlog
is enabled.

Added a test case.